# multiverse_dive

./: .dockerignore  CLAUDE.md  FIXES.md  GUIDELINES.md  OPENSPEC.md  PROJECT_STATUS.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.yml  monitor_status.sh  orchestrator.sh  orchestrator_daemon.sh  parallel_orchestrator.sh  pyproject.toml  run_campfire_analysis.py  run_real_analysis.py  run_tests.py  scheduled_parallel_orchestrator.sh  test_e2e_workflow.py  test_parallel_orchestrator.sh
.github/workflows/: deploy-production.yml  deploy-staging.yml  docker-build.yml  docker-push.yml
agents/pipeline/: __init__.py  assembly.py  execution.py  main.py  monitoring.py
agents/reporting/: __init__.py  delivery.py  formats.py  main.py  products.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  analyze.py  discover.py  export.py  ingest.py  resume.py  run.py  status.py  validate.py
config/: ingestion.yaml
core/analysis/execution/: __init__.py  checkpoint.py  dask_adapters.py  dask_tiled.py  distributed.py  router.py  runner.py  sedona_adapters.py  sedona_backend.py  tiled_runner.py
core/analysis/forecast/: __init__.py  ingestion.py  projection.py  scenarios.py  validation.py
core/analysis/fusion/: __init__.py  alignment.py  conflict.py  corrections.py  uncertainty.py
core/analysis/selection/: selector.py
core/data/: broker.py
core/data/cache/: __init__.py  index.py  manager.py  storage.py
core/data/discovery/: wms_wcs.py
core/data/evaluation/: __init__.py  constraints.py  ranking.py
core/data/ingestion/: __init__.py  streaming.py  virtual_index.py
core/data/selection/: __init__.py  atmospheric.py  fusion.py  strategy.py
core/execution/: __init__.py  tiling.py
core/quality/: __init__.py
core/quality/reporting/: __init__.py  diagnostics.py  qa_report.py
core/quality/sanity/: __init__.py  artifacts.py  spatial.py  temporal.py  values.py
deploy/aws/batch/: job-definition.json
deploy/aws/ecs/: task-definition.json
deploy/aws/lambda/: serverless.yml
deploy/azure/aks/: deployment.yaml
deploy/azure/container-instances/: deployment.json
deploy/edge/: README.md
deploy/edge/arm64/: Dockerfile.lightweight
deploy/edge/nvidia-jetson/: Dockerfile.gpu
deploy/gcp/cloud-run/: service.yaml
deploy/gcp/kubernetes/: deployment.yaml
deploy/kubernetes/: hpa.yaml  ingress.yaml  namespace.yaml
deploy/kubernetes/configmaps/: app-config.yaml
deploy/kubernetes/deployments/: api.yaml  worker.yaml
deploy/kubernetes/persistentvolumes/: data-pvc.yaml
deploy/kubernetes/secrets/: app-secrets.yaml
deploy/kubernetes/services/: api-lb.yaml  api-service.yaml
deploy/on-prem/cluster/: ansible-playbook.yml
deploy/on-prem/standalone/: docker-compose.yml
docker/api/: Dockerfile
docker/base/: Dockerfile
docker/cli/: Dockerfile
docker/core/: Dockerfile
docker/worker/: Dockerfile
docs/: IMAGE_VALIDATION_SUMMARY.md  IMAGE_VALIDATION_WORKFLOW.md  OPENSPEC_ARCHIVE.md  PRODUCTION_IMAGE_VALIDATION_REQUIREMENTS.md
openspec/definitions/algorithms/: baseline_algorithms.yaml
openspec/schemas/: common.schema.json
scripts/: build-images.sh  push-images.sh
tests/: conftest.py  test_advanced_algorithms.py  test_agents.py  test_cache.py  test_constraints.py  test_dask_execution.py  test_execution.py  test_forecast.py  test_fusion.py  test_fusion_core.py  test_fusion_core_comprehensive.py  test_image_validation.py  test_ingestion.py  test_persistence.py  test_quality_integration.py  test_quality_reporting.py  test_ranking.py  test_reporting.py  test_sanity.py  test_sedona_execution.py  test_selection.py  test_tiling_infrastructure.py  test_validation.py  test_wildfire_algorithms.py
tests/integration/: test_validation_integration.py
(+19 files in other folders)
